<resources>
    <string name="app_name">WanAndroid</string>

    <string name="fragment_home">首页</string>
    <string name="fragment_wechat">公众号</string>
    <string name="fragment_nav">导航</string>
    <string name="fragment_project">项目</string>
    <string name="fragment_tree">体系</string>
    <string name="fragment_login">登录账号</string>
    <string name="fragment_register">注册账号</string>
    <string name="activity_account_manage">账号管理</string>

    <string name="action_retry">加载失败了，点我重试</string>
    <string name="action_search">搜索</string>
    <string name="action_back">返回</string>
    <string name="action_login">登录</string>
    <string name="action_login_running">登录中..</string>
    <string name="action_register">注册</string>
    <string name="action_register_running">注册中..</string>
    <string name="action_clean_record">清空记录</string>
    <string name="action_login_or_register">登录或注册账号</string>
    <string name="action_logout">退出当前账号</string>

    <string name="tips_unknown_error">未知错误</string>
    <string name="tips_empty_data">没有任何数据</string>
    <string name="tips_no_account">没有账号，去注册</string>
    <string name="tips_has_account">已有账号，去登录</string>
    <string name="tips_use_exist_account">使用已登录的账号</string>
    <string name="tips_login_success">登录成功</string>
    <string name="tips_login_failed">登录失败</string>
    <string name="tips_register_success">注册成功</string>
    <string name="tips_register_failed">注册失败</string>
    <string name="tips_operate_failed">操作失败</string>
    <string name="tips_not_login">点击登录</string>
    <string name="tips_star_success">收藏成功</string>
    <string name="tips_star_failed">收藏失败</string>

    <string name="title_level">Lv.</string>
    <string name="title_score">积分：</string>
    <string name="title_sort">排行：</string>
    <string name="title_score_board">积分榜</string>
    <string name="title_my_star">我的收藏</string>
    <string name="title_browser_search">搜索引擎</string>
    <string name="title_browser_search_baidu">百度</string>
    <string name="title_browser_search_google">谷歌</string>

    <string name="article_type_top">置顶</string>
    <string name="article_type_new">新</string>
    <string name="menu_open">打开菜单</string>
    <string name="menu_close">关闭菜单</string>
    <string name="menu_ask">问答</string>
    <string name="menu_square">广场</string>
    <string name="menu_browser">浏览器</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_night_system">跟随系统</string>
    <string name="menu_setting">设置</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="search_input_hint">输入关键字，多个关键字空格隔开</string>
    <string name="browser_search_hint">输入搜索</string>

    <string name="hint_account_name">输入用户名</string>
    <string name="hint_password">输入密码</string>

    <string name="error_invalid_params">参数不正确</string>
</resources>
